fix wrapping

--- a/fakeyou/src/App.scss
+++ b/fakeyou/src/App.scss
@@ -235,6 +235,10 @@ nav {
   text-align: center;
 }
 
+.white-space-nowrap {
+  white-space: nowrap;
+}
+
 /** RESPONSIVENESS **/
 
 /** Hide footer when using onscreen keyboard. */
